--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -94,5 +94,5 @@
 <hr id="hr-azul">
 <div class="wrapper-perfil">
   <h2>Colecciones Especiales</h2>
-  <!--<app-coleccionesp></app-coleccionesp>-->
+  <app-coleccionesp></app-coleccionesp>
 </div>
