feat: Catalogo ropa
- Vista base
-Filtro por texto (pipe)
-Catalogo ropa
-Servicio paginacion

--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -44,7 +44,7 @@
     <div class="grid-4">
       <span>imagen</span>
       <button id="muebles">Muebles</button>
-      <button id="ropa">Ropa</button>
+      <button id="ropa" routerLink="/catalogo-ropa">Ropa</button>
       <span>imagen</span>
     </div>
   </div>
