--- a/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
+++ b/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
@@ -44,10 +44,10 @@
     <img [src]="this.vecinoShow.imgPhoto" id="vecino-img">
     <h3>Nombre: {{this.vecinoShow.nombre}}</h3>
     <div>
-      <p>Cumpleaños: {{mesToString(this.vecinoShow.cumple)}}</p>
-      <p>Personalidad: {{this.vecinoShow.personalidad}}</p>
-      <p>Especie: {{this.vecinoShow.especie}}</p>
-      <p>Género: {{this.vecinoShow.genero}}</p>
+      <p><img src="../../../assets/images/cumple.png" style="width: 2vw; height: 2vw;">: {{mesToString(this.vecinoShow.cumple)}}</p>
+      <p>Personalidad: {{this.vecinoShow.personalidad | vecinos}}</p>
+      <p>Especie: {{this.vecinoShow.especie | vecinos}}</p>
+      <p>Género: {{this.vecinoShow.genero | vecinos}}</p>
     </div>
   </div>
 
