Todo hecho, error al borrar vecino vacio

--- a/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.css
+++ b/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.css
@@ -2,4 +2,20 @@
   position: absolute;
   z-index: 2;
 }
+.lista{
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  height: 50vw;
+}
+.elementList{
+  display: grid;
+  width: 8vw;
+  text-align: center;
+}
+.botones{
+  padding-right: 4vw;
+  padding-top: 1vw;
+  display: grid;
 
+}
