feat: Cat Ropa improvements
- Ordenado carpeta general

-Creado pipeAc (comun para filtrar por nombre todos los valores de la libreria AC)

-Borrado API Service

-CatRopa limites paginacion arreglada

-CatRopa filtros vista

--- a/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
+++ b/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
@@ -11,11 +11,11 @@
 
 <div class="item-list-wrap flex-centered">
   <div class="boton-pag flex-column-centered" style="visibility: hidden;" #atras>
-    <button class="boton-pag boton-circular b-verde" (click)="paginacionNavigation('atras')" > < </button>
+    <button class="boton-pag boton-circular b-verde" [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
   </div>
 
   <div class="paginacion-content">
-    <ng-container *ngFor="let item of listaObjetos | paginacion:page_number">
+    <ng-container *ngFor="let item of listaObjetos | paginacion:page_number:max_items">
       <div class="item-container">
         <div class="check-container">
           <button [style]="{'background-image': checkTieneItem(listaUsuario.includes(item.name))}" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="boton-pag flex-column-centered" style="visibility: visible;" #alante>
-    <button class="boton-pag boton-circular b-verde" (click)="paginacionNavigation('alante')"> > </button>
+    <button class="boton-pag boton-circular b-verde" [style.visibility]="listaObjetos.length > max_items && page_number * max_items < listaObjetos.length ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaObjetos)"> > </button>
   </div>
 </div>
 <span>Página {{page_number}} de {{(this.listaObjetos.length / 16) | round:"techo"}}</span>
