--- a/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
+++ b/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
@@ -2,9 +2,11 @@
 <div class="content-wrapper" style="background-color: pink;">
   <div style="margin-top: 4vw;">
     <h2>Catálogo de ropa</h2>
-    <input [formControl]="busqueda" type="text" placeholder="Buscar" style="width: 50%;">
     <div class="flex-centered">
-      <button *ngFor="let tipo of tiposPrenda | keyvalue" (click)="activaFiltro(tipo.key)" [class]="this.botonFiltrar == tipo.key ? 'boton-alargado b-verde' : 'boton-alargado b-azul'">{{tipo.value}}</button>
+      <div class="flex-centered" style="flex-wrap: wrap;flex-basis: 40vw; margin-right: 1.5vw;">
+        <button *ngFor="let tipo of tiposPrenda | keyvalue" (click)="activaFiltro(tipo.key)" [class]="this.botonFiltrar == tipo.key ? 'boton-alargado b-verde' : 'boton-alargado b-azul'" style="margin:0.5vw">{{tipo.value}}</button>
+      </div>
+      <input [formControl]="busqueda" type="text" placeholder="Buscar" style="width: 30%;">
     </div>
   </div>
 </div>
@@ -14,17 +16,17 @@
 
   <!-- Paginacion arriba -->
   <div class="pag-menu flex-centered">
-    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAtras(page_number)"></button>
+    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
     <ng-container *ngFor="let pag of num_paginas">
       <button [style.background-color]="pag == page_number ? 'blue' : 'white'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
     <span>Página {{page_number}} poner botones</span>
-    <button [style.visibility]="max_items < listaItems.length && page_number * max_items < listaItems.length ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"></button>
+    <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
   </div>
 
   <!-- Grid -->
   <div class="grid-w-gap" style="margin: 1vw 0">
-      <ng-container *ngFor="let item of listaItems | filtroRopa:nameFilter | paginacion:page_number:max_items">
+      <ng-container *ngFor="let item of listaItems | filtroAc:nameFilter | paginacion:page_number:max_items">
         <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
           <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;">
           <span>{{item.translations.spanish | capitalize}}</span>
@@ -44,12 +46,12 @@
 
   <!-- Paginacion abajo -->
   <div class="pag-menu flex-centered">
-    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAtras(page_number)"></button>
+    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
     <ng-container *ngFor="let pag of num_paginas">
       <button [style.background-color]="pag == page_number ? 'blue' : 'white'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
     <span>Página {{page_number}} poner botones</span>
-    <button [style.visibility]="listaItems.length > max_items && page_number * max_items < listaItems.length ? 'visible' : 'hidden'" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"></button>
+    <button [style.visibility]="listaItems.length > max_items && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
   </div>
 
 </div>
