--- a/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
+++ b/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
@@ -1,5 +1,5 @@
 <!-- Filtros búsqueda -->
-<div class="content-wrapper" style="background-color: pink;">
+<div class="content-wrapper-top" style="background-color: pink;">
   <div style="margin-top: 4vw;">
     <h2>Catálogo de ropa</h2>
     <div class="flex-centered">
@@ -12,15 +12,14 @@
 </div>
 
 <!-- Items -->
-<div class="content-wrapper">
+<div class="content-wrapper-bot">
 
   <!-- Paginacion arriba -->
   <div class="pag-menu flex-centered">
     <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
     <ng-container *ngFor="let pag of num_paginas">
-      <button [style.background-color]="pag == page_number ? 'blue' : 'white'" (click)="page_number = pag">{{pag}}</button>
+      <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
-    <span>Página {{page_number}} poner botones</span>
     <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
   </div>
 
@@ -28,13 +27,13 @@
   <div class="grid-w-gap" style="margin: 1vw 0">
       <ng-container *ngFor="let item of listaItems | filtroAc:nameFilter | paginacion:page_number:max_items">
         <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
-          <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;">
+          <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;" [id]='item.name.replace(" ", "")'>
           <span>{{item.translations.spanish | capitalize}}</span>
 
           <!-- Variaciones -->
-          <div class="flex-centered" *ngIf="item.variations != null">
-            <ng-container *ngFor="let vari of item.variations | paginacion:page_number:3">
-              <button class="b-variacion flex-centered">
+          <div style="display: flex; width:13vw" [class]="item.variations.length < 4 ? 'flex-centered variMenu' : 'variMenu scroll-x'" *ngIf="item.variations != null">
+            <ng-container *ngFor="let vari of item.variations">
+              <button [class]="getImageElement(item).getAttribute('src') != vari.storageImage ? 'b-variacion flex-centered b-darkPink' : 'b-variacion flex-centered b-darkPurple'" (click)="getImgVariation(item, item.variations.indexOf(vari))">
                 <img src="{{vari.storageImage}}" style="width: 3vw;height: 3vw;margin:0.2vw">
               </button>
             </ng-container>
@@ -48,10 +47,9 @@
   <div class="pag-menu flex-centered">
     <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
     <ng-container *ngFor="let pag of num_paginas">
-      <button [style.background-color]="pag == page_number ? 'blue' : 'white'" (click)="page_number = pag">{{pag}}</button>
+      <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
-    <span>Página {{page_number}} poner botones</span>
-    <button [style.visibility]="listaItems.length > max_items && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
+    <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
   </div>
 
 </div>
