--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -190,8 +190,16 @@ label{
   box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%);
 }
 
-.content-wrapper{
-  padding: 2vw;
+.content-wrapper-top{
+  padding: 2vw 2vw 0 2vw;
+}
+
+.content-wrapper-mid{
+  padding: 0 2vw;
+}
+
+.content-wrapper-bot{
+  padding: 0 2vw 2vw 2vw;
 }
 
 .grid-w-gap{
@@ -202,6 +210,10 @@ label{
 .grid-item-wrap{
   border-radius: 20px;
   padding: 1vw;
+}
+
+.scroll-x{
+  overflow-x: scroll;
 }
 
 
