--- a/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
+++ b/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
@@ -17,7 +17,7 @@
   <!-- Paginacion arriba -->
   <div class="pag-menu flex-centered">
     <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
-    <ng-container *ngFor="let pag of num_paginas">
+    <ng-container *ngFor="let pag of this.getPaginas(listaItems | filtroAc:nameFilter)">
       <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
     <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
@@ -44,9 +44,9 @@
   </div>
 
   <!-- Paginacion abajo -->
-  <div class="pag-menu flex-centered">
+  <div class="pag-menu flex-centered" [style.padding-top]="(listaItems | filtroAc:nameFilter).length < 6 ? '15%' : ''">
     <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
-    <ng-container *ngFor="let pag of num_paginas">
+    <ng-container *ngFor="let pag of this.getPaginas(listaItems | filtroAc:nameFilter)">
       <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
     </ng-container>
     <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
