--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -43,7 +43,7 @@
     <p id="titulo">¡Ve de compras!</p>
     <div class="grid-4">
       <span>imagen</span>
-      <button id="muebles">Muebles</button>
+      <button id="muebles" routerLink="/catalogo-muebles">Muebles</button>
       <button id="ropa" routerLink="/catalogo-ropa">Ropa</button>
       <span>imagen</span>
     </div>
