feat: Catalogo Fosiles done

--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -33,7 +33,7 @@
   <div class="dv-inicio">
     <p id="titulo">¡Completa el Museo!</p>
     <div class="grid-3">
-      <button id="fosiles">Fosiles</button>
+      <button id="fosiles" routerLink="/catalogo-fosiles">Fosiles</button>
       <span>imagen</span>
       <button id="arte">Arte</button>
     </div>
