--- a/project/myCrossing/src/app/cat-fosil/cat-fosil.component.html
+++ b/project/myCrossing/src/app/cat-fosil/cat-fosil.component.html
@@ -76,7 +76,7 @@
     <div class="grid-w-gap" style="margin: 1vw 0">
         <ng-container *ngFor="let item of listaItems | filtroAc:nameFilter | paginacion:page_number:max_items">
           <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
-            <div class="check-container" [style.visibility]="this._verif.user == null ? 'hidden' : 'visible'">
+            <div class="check-container" *ngIf="this._verif.user != null">
               <button [style.background-image]="this.listaUsuario.includes(item.name.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
             </div>
             <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;" [id]='item.name.replace(" ", "")'>
