--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -35,7 +35,7 @@
     <div class="grid-3">
       <button id="fosiles" routerLink="/catalogo-fosiles">Fosiles</button>
       <span>imagen</span>
-      <button id="arte">Arte</button>
+      <button id="arte" routerLink="/catalogo-arte">Arte</button>
     </div>
   </div>
   <hr id="hr-azul">
