--- a/project/myCrossing/src/app/cat-arte/cat-arte.component.css
+++ b/project/myCrossing/src/app/cat-arte/cat-arte.component.css
@@ -2,8 +2,14 @@ span{
   font-size: 1.4vw;
 }
 
-h2, span{
+h2, span, p{
   text-align: center;
+}
+
+p{
+  margin: 0;
+  font-weight: bold;
+  font-size: 1.5vw;
 }
 
 .content-wrapper-bot{
@@ -26,6 +32,15 @@ h2, span{
 .editar{
   right: 1vw;
   top: 1vw;
+}
+
+.left{
+  left: 1vw;
+  top: 1vw;
+}
+
+.icono-ojo{
+  background-image: url("../../assets/images/logo.png");
 }
 
 .b-variacion{
@@ -67,4 +82,34 @@ h2, span{
 
 .b-pag:hover{
   background-color: rgb(157 228 163);
+}
+
+.panel{
+  top:25%;
+  left:30%;
+  padding: 2%;
+  position: fixed;
+  border-style: solid;
+  border-radius: 2vw;
+  border-color: #edd9a3;
+  border-width: 0.5vw;
+  background-color: #ffefc4;
+  z-index: 1;
+  height: 30%;
+  width: 35%;
+  display: flex;
+  align-items: center;
+}
+
+.oscuro{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.644);
+}
+
+.shadow{
+  box-shadow: 0px 0px 20px 0px rgb(23 23 23 / 55%);
 }
