--- a/project/myCrossing/src/app/cat-arte/cat-arte.component.html
+++ b/project/myCrossing/src/app/cat-arte/cat-arte.component.html
@@ -72,12 +72,27 @@
     <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
   </div>
 
+  <!-- Menu Falsificacion -->
+  <div class="panel flex-centere shadow" [style.visibility]="this.menuFalsificacion ? 'visible': 'hidden'" (clickOutside)="this.menuFalsificacion ? this.menuFalsificacion = false : ''">
+    <div style="display: flex; justify-content: space-around; width: 100%;">
+      <div>
+        <p>Real</p>
+        <img [src]="this.menuReal" style="width: 12vw;">
+      </div>
+      <div>
+        <p>Falso</p>
+        <img [src]="this.menuFalso"style="width: 12vw;">
+      </div>
+    </div>
+  </div>
+
   <!-- Grid -->
   <div class="grid-w-gap" style="margin: 1vw 0">
       <ng-container *ngFor="let item of listaItems | filtroAc:nameFilter | paginacion:page_number:max_items">
         <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
           <div class="check-container" *ngIf="this._verif.user != null">
             <button [style.background-image]="this.listaUsuario.includes(item.name.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
+            <button class="boton-imagen editar left icono-ojo" (click)="verFalsificacion($event, item)" *ngIf="tieneFalsificacion(item)"></button>
           </div>
           <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;" [id]='item.name.replace(" ", "")'>
           <span>{{item.translations.spanish | capitalize}}</span>
