--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -25,7 +25,7 @@
         <img class="imagen-inicio" *ngSwitchCase="3" src="../../assets/images/buceo.png" alt="buceo"/>
       </ng-container>
       <button id="peces" (mouseover)="imagen = 1">Peces</button>
-      <button id="bichos" (mouseover)="imagen = 2">Bichos</button>
+      <button id="bichos" routerLink="/catalogo-insectos" (mouseover)="imagen = 2">Bichos</button>
       <button id="criaturas-marinas" (mouseover)="imagen = 3">Criaturas marinas</button>
     </div>
   </div>
