--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
@@ -68,3 +68,40 @@ span{
   .b-pag:hover{
     background-color: rgb(157 228 163);
   }
+  .oscuro{
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      background-color: rgba(0, 0, 0, 0.644);
+  }
+  .panel{
+      top:12%;
+      left:30%;
+      padding: 2%;
+      width: 35vw;
+      font-size: 1.5vw;
+      position: fixed;
+      border-style: solid;
+      border-radius: 2vw;
+      border-color: #edd9a3;
+      border-width: 0.5vw;
+      background-color: #ffefc4;
+  }
+  .datos{
+    margin-top: 1vw;
+  }
+  .imagenHemisferio{
+    width: 5vw;
+    height: 5vw;
+    padding: 1vw;
+  }
+  .spanImg{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 4vw;
+  }
+  .spanImg:hover{
+    background-color: #85c583 !important;
+  }
