--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
@@ -2,10 +2,28 @@
 <div class="content-wrapper-top" style="background-color: #e2d4b9;">
     <div style="margin-top: 4vw;">
       <h2>Catálogo de insectos</h2>
-      <div class="flex-centered" style="padding-bottom: 1vw;">
-        <div class="flex-centered" style="flex-wrap: wrap;margin-right: 1.5vw;" [style.display]="this._verif.user == null ? 'none' : 'block'">
-          <button (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'boton-alargado b-verde' : 'boton-alargado b-azul'" style="margin:0.5vw">Obtenidos</button>
-          <button (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'boton-alargado b-verde' : 'boton-alargado b-azul'" style="margin:0.5vw">Me faltan</button>
+      <div class="flex-centered" [style.display]="filtrando ? 'flex' : 'none'" style="padding-bottom: 1vw;">
+        <div class="bigFilterContainerBrown">
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On trees (any kind)')" [class]="this.filtroAcWhe == 'On trees (any kind)' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Sobre árboles (cualquier tipo)</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On hardwood/cedar trees')" [class]="this.filtroAcWhe == 'On hardwood/cedar trees' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Sobre árboles hardwood o cedar</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('Flying near flowers')" [class]="this.filtroAcWhe == 'Flying near flowers' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Volando cerca de flores</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('Flying near water')" [class]="this.filtroAcWhe == 'Flying near water' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Volando cerca del agua</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On tree stumps')" [class]="this.filtroAcWhe == 'On tree stumps' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 1;">Sobre tocones</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('Flying')" [class]="this.filtroAcWhe == 'Flying' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 2;">Volando</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On the ground')" [class]="this.filtroAcWhe == 'On the ground' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 3;">En el suelo</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On flowers')" [class]="this.filtroAcWhe == 'On flowers' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 4;">Sobre flores</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On rivers/ponds')" [class]="this.filtroAcWhe == 'On rivers/ponds' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 1;">Sobre ríos o estanques</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('On palm trees')" [class]="this.filtroAcWhe == 'On palm trees' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 2;">Sobre palmeras</button>
+          <button class="boton-alargado whereButton" (click)="filtraWhe('Other')" [class]="this.filtroAcWhe == 'Other' ? 'b-verde' : 'b-azul'" style="height: 4vw; grid-column: 3;">Otros</button>
+        </div>
+        <div class="bigFilterContainerYellow">
+          <button class="boton-alargado weatherButton" (click)="filtraWe('Any weather')" [class]="this.filtroAcWe == 'Any weather' ? 'b-verde' : 'b-azul'">Cualquier clima</button>
+          <button class="boton-alargado weatherButton" (click)="filtraWe('Any except rain')" [class]="this.filtroAcWe == 'Any except rain' ? 'b-verde' : 'b-azul'">Cualquier clima menos lluvia</button>
+          <button class="boton-alargado weatherButton" (click)="filtraWe('Rain only')" [class]="this.filtroAcWe == 'Rain only' ? 'b-verde' : 'b-azul'">Solo durante lluvia</button>
+        </div>
+        <div style="margin-right: 1vw; width: 10vw;" [style.display]="this._verif.user == null ? 'none' : 'block'">
+          <button class="boton-alargado extraButton" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul'">Obtenidos</button>
+          <button class="boton-alargado extraButton" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul'">Me faltan</button>
         </div>
         <input [formControl]="busqueda" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
       </div>
@@ -19,8 +37,8 @@
     <div class="pag-menu flex-centered">
       <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
-      <ng-container *ngIf="this.getPaginas(listaCreatures | filtroAc:nameFilter).length < 25; else paginacionComprimida">
-        <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter)">
+      <ng-container *ngIf="this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length < 25; else paginacionComprimida">
+        <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter)">
           <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
@@ -28,58 +46,58 @@
       <ng-template #paginacionComprimida>
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 11)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(0, 11)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion mid -->
-        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 10">
+        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length - 10">
           <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion end -->
-        <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 11 < page_number">
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 2)">
+        <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length - 11 < page_number">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
+      <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
     </div>
 
     <!-- Grid -->
     <div class="grid-w-gap" style="margin: 1vw 0">
-        <ng-container *ngFor="let creature of listaCreatures | filtroAc:nameFilter | paginacion:page_number:max_items">
+        <ng-container *ngFor="let creature of listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter | paginacion:page_number:max_items">
           <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
             <div class="check-container" *ngIf="this._verif.user != null">
               <button [style.background-image]="this.listaUsuario.includes(creature.translations.spanish.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(creature)"></button>
             </div>
-            <img (click)="mostrar(creature)" [src]="creature.critterpediaImage" style="cursor: pointer; height: 5vw; max-width: 10vw;" [id]='creature.translations.spanish.replace(" ", "")'>
+            <img (click)="mostrar(creature)" [src]="creature.critterpediaImage" style="cursor: pointer; height: 5vw; max-width: 10vw; padding-left: 2vw; padding-right: 2vw;" [id]='creature.translations.spanish.replace(" ", "")'>
             <span>{{creature.translations.spanish | capitalize}}</span>
           </div>
         </ng-container>
@@ -89,8 +107,8 @@
     <div class="pag-menu flex-centered">
       <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
-      <ng-container *ngIf="this.getPaginas(listaCreatures | filtroAc:nameFilter).length < 25; else paginacionComprimida">
-        <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter)">
+      <ng-container *ngIf="this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length < 25; else paginacionComprimida">
+        <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter)">
           <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
@@ -98,48 +116,48 @@
       <ng-template #paginacionComprimida>
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 11)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(0, 11)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion mid -->
         <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 10">
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 2)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 2, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion end -->
-        <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 11 < page_number">
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 2)">
+        <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length - 11 < page_number">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
+      <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
     </div>
 
   </div>
