--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
@@ -80,6 +80,8 @@ span{
       top:12%;
       left:30%;
       padding: 2%;
+      padding-bottom: 0.2vw;
+      padding-top: 0.3vw;
       width: 35vw;
       font-size: 1.5vw;
       position: fixed;
