Añadido ErrorService y error handling - WIPen servicios
-Los servicios recogen errores

-Añadido ErrorService que recoge errores en los componentes y hace que AppComponent muestre error

-TODO: Arreglar PHP fetch_assoc, comprobar que funciona errorService y  recoger errores en el resto de componentes

--- a/project/myCrossing/src/app/app.component.html
+++ b/project/myCrossing/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
+<div [hidden]="esconder" (showError)="showNewError($event)" class="div-error">
+  <p><strong>Error:</strong> {{errMssg}}</p>
+</div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
