--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -216,4 +216,15 @@ label{
   overflow-x: scroll;
 }
 
+.div-error{
+  position: absolute;
+  background-color: rgb(252, 137, 137);
+  width: 30%;
+  align-self: center;
+  top: 7%;
+  z-index: 10;
+  padding: 1vw 2.5vw;
+  border-radius: 20px;
+}
+
 
