--- a/project/myCrossing/src/app/app.component.html
+++ b/project/myCrossing/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div [hidden]="esconder" (showError)="showNewError($event)" class="div-error">
+<div [hidden]="esconder" class="div-error">
   <p><strong>Error:</strong> {{errMssg}}</p>
 </div>
 <router-outlet></router-outlet>
