--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -9,7 +9,9 @@
   </div>
 
   <div class="boton-usuario">
-    <button class="login" class="button-nav" style="margin: 0 0 0 1vw;" *ngIf="!verification.logged; else logueado" routerLink="/inicia-sesion" routerLinkActive="activo">Inicia sesión</button>
+    <ng-container *ngIf="!verification.logged; else logueado">
+      <button class="login" class="button-nav" style="margin: 0 0 0 1vw;" routerLink="/inicia-sesion" routerLinkActive="activo">Inicia sesión</button>
+    </ng-container>
     <ng-template #logueado>
       <div (clickOutside)="cierraMenu()" class="cierra-wrap">
         <span style="font-size: 1.3vw;"><b>{{this.verification.nombre | capitalize}}</b></span>
